# OpenGLGameCpp

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  glad.c  main.cpp
Camera/: Camera.cpp  Camera.h
MeshMgr/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
RenderSystem/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Resources/Models/boombox/: BoomBox.gltf
Resources/Shaders/: light.vert  outlining.vert  shader.frag  shader.vert
ShaderMgr/: Shader.cpp  Shader.h
Shaders/: InCodeShaders.h  fragment.frag  shader.frag
TextureMgr/: Texture.cpp  Texture.h
Window/: MainWindow.cpp  MainWindow.h
glad/glad/: glad.h
json/: json.h
